# transmission

./: README.md
client/: .gitignore  .main.cpp.swp  CMakeLists.txt  code.cpp  code.h  main.cpp  msg_header.h
client/code/: code.h
client/net/: socket.cpp  socket.h
server/: .gitignore  CMakeLists.txt  code.cpp  code.h  main.cpp
server/code/: code.h
server/msg/: msg_header.h
server/net/: socket.cpp
server/utils/: utils.h
src/: client  client.cpp  msg_header.h  server  server.cpp
